# HMIStack

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  create.sh
src/common/: base_types.h
src/core/: core.cpp  core.h
src/gui/: gui_hndl_types.h  i_gui_hndl.h
src/gui/DearImGui/: gui_hndl_dearImGui.cpp  gui_hndl_dearImGui.h
src/gui/Dummy/: gui_hndl_dmy.cpp  gui_hndl_dmy.h
src/gui/Qt/: gui_hndl_Qt.cpp  gui_hndl_Qt.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/gui/wxWidgets/: gui_hndl_wxWidgets.cpp  gui_hndl_wxWidgets.h  myapp.cpp  myapp.h
src/gui/wxWidgets/app/: custom_button.cpp  custom_button.h  handler.cpp  handler.h  myapp.cpp  myapp.h  myframe.cpp  myframe.h
src/main/: main.cpp
src/operations/: i_op.h  operation_hndl.cpp  operation_hndl.h  operation_hndl_types.h
src/operations/method1/: op_1.cpp  op_1.h
src/operations/method2/: op_2.cpp  op_2.h
src/state/: state_hndl.cpp  state_hndl.h  state_hndl_types.h
test/: gtest_hmi.cpp
